rust/macros/tests/ui/fail/missing_message_attr.stderr
error: expected #[message(...)] attribute
  --> tests/ui/fail/missing_message_attr.rs:11:1
   |
11 | struct Alice(#[route(Bob)] Channel);
   | ^^^^^^
